@@ -1,3 +1,7 @@
+2003-02-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* crc16.tcl: Fixed a bug in the option handling error info.
+
 2003-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* crc32.tcl: 
